# playground

./: .gitignore  2020.md  README.md
algorithm/: README.md
algorithm/array/: README.md
algorithm/typescript/: index.ts  package.json  tsconfig.json
assembly/asmtutor/: README.md  clean.sh  docker.sh  run.sh  socket
c++/: README.md
c++/thecherno/: Log  Log.cpp
c++/tutorial/: struct_of_program
c/adventure/: Makefile  README.md  execute.c  execute.h  inventory.c  lilcave  location.c  main  main.c  match.c  match.h  misc.c  misc.h  object.awk  object.c  object.h  object.txt  parsexec.c  parsexec.h  toggle.c  toggle.h
dart/language-samples/: 01_hello_world.dart  02_variables.dart  03_control_flow_statements.dart  04_functions.dart  05_comments.dart  07_classes.dart  08_inheritance.dart  09_mixins.dart  10_interfaces_and_abstract_classes.dart  11_async.dart  12_exceptions.dart
lox/: README.md
os/ostep/: README.md
python/216_PyTorch深度学习实战/: README.md  cat.ipynb  numpy1.ipynb  numpy2.ipynb  tensor.ipynb  torchvision_dataloader.ipynb  torchvision_other.ipynb  torchvision_transforms.ipynb
python/Python数据科学手册/: README.md  docker-compose.yml
python/deep_learning_with_python/: Pipfile  README.md
python/learn_scrapy/: Pipfile  README.md
python/learnpytorch.io/: 00_PyTorch_Fundamentals.ipynb  01_PyTorch_Workflow_Fundamentals.ipynb  02_PyTorch_Neural_Network_Classification.ipynb  03_PyTorch_Computer_Vision.ipynb  04_PyTorch_Custom_Datasets.ipynb  pyproject.toml
python/learnpytorch.io/models/: 03_pytorch_computer_vision_model_2.pth
shell/: gitlog.sh
(+211 files in other folders)
