
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "blue", email = "405622394@qq.com"},
]
dependencies = [
    "torch>=2.0.1",
    "jupyterlab>=4.0.3",
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.3",
    "torchvision>=0.15.2",
    "torchmetrics>=1.0.3",
    "setuptools>=68.0.0",
    "tqdm>=4.66.0",
    "mlxtend>=0.22.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
